<resources>
    <string name="app_name">CashTag</string>
    <string name="dashboard">Dashboard</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="amount">Amount</string>
    <string name="total_monthly_spendings">Total Monthly Spendings</string>
    <string name="groceries">Groceries</string>
    <string name="category_name">category name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shops">Shops</string>
    <string name="add">Add</string>
    <string name="reminders">Reminders</string>
    <string name="Dashboard">Dashboard</string>

    <string name="scan_bill">Scan Bill</string>
    <string name="add_manually">Add Manually</string>
    <string name="title">Title</string>
    <string name="image_preview">Image Preview</string>
    <string name="save">Save</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="shopsText">Shops</string>

    <string-array name="expense_categories">
        <item>Food</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Others</item>
    </string-array>
</resources>