<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard">

    <TextView
        style="@style/App.design.MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        app:layout_constraintBottom_toTopOf="@+id/materialButtonToggleGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_year"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_month"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/month"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="86dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_day"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="86dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        style="@style/Color.Dashboard.Total.view"
        android:id="@+id/totalViewMain"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/total_monthly_spendings"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup2"
        />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:textSize="7pt"
        android:text="@string/amount"
        android:gravity="center"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="@id/totalViewMain"
        app:layout_constraintTop_toTopOf="@id/totalViewMain"
        app:layout_constraintStart_toStartOf="@id/totalViewMain"
        app:layout_constraintEnd_toEndOf="@id/totalViewMain"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="211dp" />

    <ScrollView
        style="@style/Color.Dashboard.Scroll.view"
        android:id="@+id/scrollView2"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalViewMain"
        >

        <LinearLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>